# bazel_git_override_demo

./: MODULE.bazel  README.md  ddclient_apko_image_config.yaml
